--- a/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPhone.storyboard
@@ -185,16 +185,127 @@
             </objects>
             <point key="canvasLocation" x="646" y="180"/>
         </scene>
-        <!--View Controller - Weather-->
+        <!--Weather View Controller - Weather-->
         <scene sceneID="fNY-d4-cGv">
             <objects>
-                <viewController title="Weather" id="B1o-P1-9bd" sceneMemberID="viewController">
+                <viewController title="Weather" id="B1o-P1-9bd" customClass="WeatherViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="32T-Bc-C7x">
                         <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="176" sectionHeaderHeight="22" sectionFooterHeight="22" id="Tjc-eq-eTd">
+                                <rect key="frame" x="0.0" y="143" width="320" height="356"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="cell" rowHeight="176" id="4Uk-p3-Hgm" customClass="TableCell">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="176"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="175"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="vVT-2T-qL8">
+                                                    <rect key="frame" x="20" y="20" width="58" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="KIp-A5-ueJ">
+                                                    <rect key="frame" x="130" y="20" width="60" height="48"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="vcQ-qM-9xk">
+                                                    <rect key="frame" x="241" y="20" width="59" height="47"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="PU3-KG-ZNW">
+                                                    <rect key="frame" x="249" y="76" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="enX-Fj-jfD">
+                                                    <rect key="frame" x="249" y="105" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="KTR-Lq-iT7">
+                                                    <rect key="frame" x="249" y="134" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="CgA-Pc-CUi">
+                                                    <rect key="frame" x="139" y="76" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="o2g-GT-BpD">
+                                                    <rect key="frame" x="139" y="105" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="015-wa-Wf5">
+                                                    <rect key="frame" x="139" y="134" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="e4x-15-p2J">
+                                                    <rect key="frame" x="28" y="76" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2Bd-f0-zHp">
+                                                    <rect key="frame" x="28" y="105" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="QsR-w7-q89">
+                                                    <rect key="frame" x="28" y="134" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <connections>
+                                            <outlet property="condition" destination="e4x-15-p2J" id="ad9-0v-qa5"/>
+                                            <outlet property="conditionImage" destination="vVT-2T-qL8" id="WRF-US-SdL"/>
+                                            <outlet property="curTemp" destination="015-wa-Wf5" id="3hq-rb-217"/>
+                                            <outlet property="maxTemp" destination="o2g-GT-BpD" id="m3H-dS-b8Z"/>
+                                            <outlet property="minTemp" destination="CgA-Pc-CUi" id="tBz-ew-R0C"/>
+                                            <outlet property="pressure" destination="KTR-Lq-iT7" id="Syz-Sl-3iQ"/>
+                                            <outlet property="tempImage" destination="KIp-A5-ueJ" id="Dc6-Za-XdQ"/>
+                                            <outlet property="timeLabel" destination="QsR-w7-q89" id="0Ap-C9-i5C"/>
+                                            <outlet property="windDirection" destination="enX-Fj-jfD" id="pdW-FI-0CA"/>
+                                            <outlet property="windImage" destination="vcQ-qM-9xk" id="jBH-F7-p2U"/>
+                                            <outlet property="windSpeed" destination="PU3-KG-ZNW" id="L9Y-F8-Kwp"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Weather" id="tsI-cS-Ptg"/>
+                    <connections>
+                        <outlet property="tableView" destination="Tjc-eq-eTd" id="SSN-zl-5nN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X63-fn-fnU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -353,6 +464,44 @@
                 <relationship kind="outlet" name="windLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="zoomInButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="zoomOutButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="TableCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TableCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="condition" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="conditionImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="curTemp" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="maxTemp" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="minTemp" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="pressure" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="tempImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="timeLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="windDirection" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="windImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="windSpeed" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="WeatherViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WeatherViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="cloudCover" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="conditionImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="conditionLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="maxTemp" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="minTemp" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="precipitation" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="pressure" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="tableCell" candidateClass="UITableViewCell"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="temperatureCurrent" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="temperatureMax" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="temperatureMin" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="time" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="viewController" candidateClass="UIView"/>
+                <relationship kind="outlet" name="windDirection" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="windIcon" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="windSpeed" candidateClass="UILabel"/>
             </relationships>
         </class>
     </classes>
