--- a/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPhone.storyboard
@@ -32,9 +32,9 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="499"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="rsA-Gc-ZMi">
-                                <rect key="frame" x="75" y="399" width="94" height="44"/>
+                                <rect key="frame" x="75" y="399" width="74" height="44"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Toggle ME">
+                                <state key="normal" title="Path">
                                     <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -42,8 +42,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="toggleLocationOnMap:" destination="2" eventType="touchUpInside" id="AKi-3Q-0RW"/>
-                                    <action selector="togglePathAction:" destination="2" eventType="touchUpInside" id="hM9-FW-K8v"/>
+                                    <action selector="togglePathAction:" destination="2" eventType="touchUpInside" id="AhX-4J-Ati"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="HlY-Eu-jn2">
